# hs-simd-experiments

./: hs-simd-experiments.cabal  sum_array1.c
app/: Main.hs
src/Data/: SIMD.hs
src/Data/SIMD/: Array.hs  DoubleX2.hs  FloatX4.hs
