cabal-version:      2.4
name:               hs-simd-experiments
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Michael Vollmer
maintainer:         vollmerm@indiana.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:    Data.SIMD.DoubleX2
                        Data.SIMD.FloatX4
                        Data.SIMD
                        Data.SIMD.Array
    hs-source-dirs:     src
    build-depends:      base ^>=4.16.0.0, primitive
    ghc-options:        -fllvm
    default-extensions: BangPatterns, MagicHash, UnboxedTuples

executable hs-simd-experiments
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.0.0, primitive, hs-simd-experiments
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -fllvm -fno-liberate-case -funfolding-use-threshold1000 -optlo-O3 -ddump-to-file -ddump-llvm -ddump-simpl
